test/resources/valid/ValidStringMethod.flo
string getMethod = 'GET';

action GET_ALL_POSTS = network(url = '/posts', method = getMethod);

flow POSTS = {
    string[] posts = [];
    GET_ALL_POSTS >> posts;
}
