test/resources/invalid/typecheck/InvalidArrayTypeAssignment.flo
number[] defaultUserIds = [342, 21];

action GET_ALL_USERS = network(url = '/users', method = 'GET');
action UPDATE_USER = network(url = '/users/:uuid', method = 'PUT');
action ENOUGH_USERS_ONLINE = toggle();

flow USERS = {
    string[] users = defaultUserIds;
    boolean enoughUsersOnline = false;
    GET_ALL_USERS >> users;
    UPDATE_USER >> users;
    ENOUGH_USERS_ONLINE >> enoughUsersOnline;
}
